dnl qDecoder - Web Application Interface for C/C++    http://www.qDecoder.org
dnl
dnl Copyright (C) 2001 The qDecoder Project.
dnl Copyright (C) 1999,2000 Hongik Internet, Inc.
dnl Copyright (C) 1998 Nobreak Technologies, Inc.
dnl Copyright (C) 1996,1997 Seung-young Kim.
dnl
dnl This library is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU Lesser General Public
dnl License as published by the Free Software Foundation; either
dnl version 2.1 of the License, or (at your option) any later version.
dnl
dnl This library is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl Lesser General Public License for more details.
dnl
dnl You should have received a copy of the GNU Lesser General Public
dnl License along with this library; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
dnl
dnl Copyright Disclaimer:
dnl   Hongik Internet, Inc., hereby disclaims all copyright interest.
dnl   President, Christopher Roh, 6 April 2000
dnl
dnl   Nobreak Technologies, Inc., hereby disclaims all copyright interest.
dnl   President, Yoon Cho, 6 April 2000
dnl
dnl   Seung-young Kim, hereby disclaims all copyright interest.
dnl   Author, Seung-young Kim, 6 April 2000

dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Revision: 1.0 $)dnl

AC_INIT(src/qDecoder.h)

PATH=$PATH:/bin:/sbin:/usr/bin:/usr/sbin:/usr/lib:/usr/libexec:/usr/ccs/bin:/usr/local/bin:/usr/local/sbin:/usr/local/lib:/usr/local/libexec

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_LN_S

AC_PATH_PROG(AR, ar)
AC_PATH_PROG(CHMOD, chmod)
AC_PATH_PROG(LD, ld)
AC_PATH_PROG(RANLIB, ranlib)
AC_PATH_PROG(RM, rm)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h stdlib.h string.h stdarg.h ctype.h time.h sys/stat.h sys/types.h dirent.h unistd.h sys/time.h sys/file.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strdup strstr gettimeofday opendir closedir flock)

AC_OUTPUT(Makefile src/Makefile examples/Makefile contrib/qValue-1.0.2/Makefile)
