dnl qDecoder - Web Application Interface for C/C++   http://www.qDecoder.org
dnl
dnl Copyright (C) 2007 Seung-young Kim.
dnl
dnl This program is free software: you can redistribute it and/or modify
dnl it under the terms of the GNU Lesser General Public License as published
dnl by the Free Software Foundation, either version 3 of the License, or
dnl (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU Lesser General Public License for more details.
dnl
dnl You should have received a copy of the GNU Lesser General Public License
dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.

dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Revision: 1.0 $)dnl

AC_INIT(src/qDecoder.h)

PATH=$PATH:/bin:/sbin:/usr/bin:/usr/sbin:/usr/lib:/usr/libexec:/usr/ccs/bin:/usr/local/bin:/usr/local/sbin:/usr/local/lib:/usr/local/libexec

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_LN_S

AC_PATH_PROG(AR, ar)
AC_PATH_PROG(CHMOD, chmod)
AC_PATH_PROG(LD, ld)
AC_PATH_PROG(RANLIB, ranlib)
AC_PATH_PROG(RM, rm)

dnl Checks for libraries.
AC_ARG_WITH(mysql,
	[  --with-mysql            enable MySQL supports],
	[WITH_MYSQL=yes],
	[WITH_MYSQL=no])
AC_SUBST(WITH_MYSQL)

dnl Checks whether qDecoder supports 64 bits
AC_ARG_ENABLE(64bits,
	AC_HELP_STRING([--enable-64bits],
		[enable 64 bits supports]),
	[ENABLE_X86_64=yes],
	[ENABLE_X86_64=no])
AC_SUBST(ENABLE_X86_64)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h stdlib.h string.h stdarg.h ctype.h time.h sys/stat.h sys/types.h dirent.h unistd.h sys/time.h sys/file.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strdup strstr gettimeofday opendir closedir flock)

AC_OUTPUT(Makefile src/Makefile examples/Makefile)
